log lib adjustment

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,11 +48,11 @@ javac.classpath=\
     ${file.reference.json-io.jar}:\
     ${file.reference.httpcore-4.4.1.jar}:\
     ${reference.streams.jar}:\
-    ${file.reference.servlet-api.jar}:\
     ${reference.powercoder.jar}:\
     ${file.reference.commons-codec-1.8.jar}:\
     ${file.reference.shellparser.jar}:\
-    ${reference.checker.jar}
+    ${reference.checker.jar}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
