--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,10 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.8.jar=lib/commons-codec-1.8.jar
 file.reference.concurrent.jar=lib/concurrent.jar
+file.reference.genson-1.3.jar=lib\\genson-1.3.jar
 file.reference.httpcore-4.4.1.jar=lib/httpcore-4.4.1.jar
 file.reference.json-io.jar=lib/json-io.jar
+file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.servlet-api.jar=lib/servlet-api.jar
 file.reference.shellparser.jar=lib/shellparser.jar
 file.reference.simdate.jar=lib/simdate.jar
@@ -51,8 +53,11 @@ javac.classpath=\
     ${reference.powercoder.jar}:\
     ${file.reference.commons-codec-1.8.jar}:\
     ${file.reference.shellparser.jar}:\
-    ${reference.checker.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.genson-1.3.jar}:\
+    ${reference.tools.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${reference.logging.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -90,16 +95,18 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.checker=../checker
+project.logging=../logging
 project.powercoder=../powercoder
 project.reflector=../reflector
 project.slogV2=../slogV2
 project.streams=../streams
-reference.checker.jar=${project.checker}/dist/checker.jar
+project.tools=../tools
+reference.logging.jar=${project.logging}/dist/logging.jar
 reference.powercoder.jar=${project.powercoder}/dist/powercoder.jar
 reference.reflector.jar=${project.reflector}/dist/reflector.jar
 reference.slogV2.jar=${project.slogV2}/dist/slogV2.jar
 reference.streams.jar=${project.streams}/dist/streams.jar
+reference.tools.jar=${project.tools}/dist/tools.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
