--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,7 +56,8 @@ javac.classpath=\
     ${file.reference.genson-1.3.jar}:\
     ${reference.tools.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${reference.logging.jar}
+    ${reference.logging.jar}:\
+    ${reference.checker.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -94,11 +95,13 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.checker=../checker
 project.logging=../logging
 project.powercoder=../powercoder
 project.reflector=../reflector
 project.streams=../streams
 project.tools=../tools
+reference.checker.jar=${project.checker}/dist/checker.jar
 reference.logging.jar=${project.logging}/dist/logging.jar
 reference.powercoder.jar=${project.powercoder}/dist/powercoder.jar
 reference.reflector.jar=${project.reflector}/dist/reflector.jar
