--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.8.jar=lib/commons-codec-1.8.jar
 file.reference.concurrent.jar=lib/concurrent.jar
-file.reference.genson-1.3.jar=lib\\genson-1.3.jar
 file.reference.httpcore-4.4.1.jar=lib/httpcore-4.4.1.jar
 file.reference.json-io.jar=lib/json-io.jar
 file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
@@ -43,8 +42,6 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.simdate.jar}:\
-    ${file.reference.xstream-1.4.3.jar}:\
-    ${reference.reflector.jar}:\
     ${file.reference.concurrent.jar}:\
     ${file.reference.json-io.jar}:\
     ${file.reference.httpcore-4.4.1.jar}:\
@@ -53,11 +50,10 @@ javac.classpath=\
     ${file.reference.commons-codec-1.8.jar}:\
     ${file.reference.shellparser.jar}:\
     ${file.reference.servlet-api.jar}:\
-    ${file.reference.genson-1.3.jar}:\
     ${reference.tools.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${reference.logging.jar}:\
-    ${reference.checker.jar}
+    ${file.reference.xstream-1.4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -95,16 +91,12 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.checker=../checker
 project.logging=../logging
 project.powercoder=../powercoder
-project.reflector=../reflector
 project.streams=../streams
 project.tools=../tools
-reference.checker.jar=${project.checker}/dist/checker.jar
 reference.logging.jar=${project.logging}/dist/logging.jar
 reference.powercoder.jar=${project.powercoder}/dist/powercoder.jar
-reference.reflector.jar=${project.reflector}/dist/reflector.jar
 reference.streams.jar=${project.streams}/dist/streams.jar
 reference.tools.jar=${project.tools}/dist/tools.jar
 run.classpath=\
