--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,10 @@ excludes=
 file.reference.commons-codec-1.8.jar=lib/commons-codec-1.8.jar
 file.reference.httpcore-4.4.1.jar=lib/httpcore-4.4.1.jar
 file.reference.json-io.jar=lib/json-io.jar
-file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
+file.reference.logback-classic-1.1.3.jar=lib/logback-classic-1.1.3.jar
+file.reference.logback-core-1.1.3.jar=lib/logback-core-1.1.3.jar
 file.reference.servlet-api.jar=lib/servlet-api.jar
+file.reference.slf4j-api-1.7.13.jar=lib/slf4j-api-1.7.13.jar
 file.reference.xstream-1.4.3.jar=lib/xstream-1.4.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -45,9 +47,10 @@ javac.classpath=\
     ${file.reference.commons-codec-1.8.jar}:\
     ${file.reference.servlet-api.jar}:\
     ${reference.tools.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${reference.logging.jar}:\
-    ${file.reference.xstream-1.4.3.jar}
+    ${file.reference.xstream-1.4.3.jar}:\
+    ${file.reference.slf4j-api-1.7.13.jar}:\
+    ${file.reference.logback-classic-1.1.3.jar}:\
+    ${file.reference.logback-core-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,11 +88,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.logging=../logging
 project.powercoder=../powercoder
 project.streams=../streams
 project.tools=../tools
-reference.logging.jar=${project.logging}/dist/logging.jar
 reference.powercoder.jar=${project.powercoder}/dist/powercoder.jar
 reference.streams.jar=${project.streams}/dist/streams.jar
 reference.tools.jar=${project.tools}/dist/tools.jar
